prepare pets ui screens

--- a/assets/languages/ar.json
+++ b/assets/languages/ar.json
@@ -17,7 +17,23 @@
     "clinic": "العيادة",
     "pets": "حيوانات أليفة",
     "adoption": "التبني",
-    "account": "الحساب"
+    "account": "الحساب",
+    "addpets": "إضافة حيوان آليف",
+    "newpet": "حيوان آليف",
+    "name": "الاسم",
+    "tag": "تاج",
+    "type": "النوع",
+    "color": "اللون",
+    "breed": "التربية",
+    "married": "متزوج",
+    "requestpassport": "طلب جواز سفر",
+    "question": "الآسئلة",
+    "submit": "إرسال"
+
+
+
+
+
 
 
 }
